--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Build Docker image
         run: docker build -t dunti/react-test -f Dockerfile.dev .
       - name: Run tests
-        run: docker run -e CI=true dunti/react-test npm run test -- --coverage
+        run: docker run -e CI=true dunti/react-test npm test 
